# binary-data-processing

./: CMakeLists.txt  main.cpp
inc/: BinaryConverter.hpp  Binary_Processor.h  TypeDefinitions.hpp  binary_processor.h  binary_processors_enumerators.h  processor_template.h
