cmake_minimum_required(VERSION 3.22)
project(binary_data_processing)

set(CMAKE_CXX_STANDARD 14)

add_executable(binary_data_processing
        main.cpp
        inc/binary_processor.h
        inc/processor_template.h
        inc/processor_template.h
        inc/binary_processors_enumerators.h
        inc/binary_processors_enumerators.h
)
